<resources>
    <string name="app_name">QIT</string>
    <string name="Confirm">Confirm</string>
    <string name="Questionnaires">Questions</string>
    <string name="Interviews">Theme Chats</string>
    <string name="Room_Chat">Room Chat</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_authorization">Sign in</string>

    <!--Authorization-->
    <string name="auth_login">Login</string>
    <string name="auth_password">Password</string>
    <string name="log_in">Log In</string>
    <string name="wrong_credentials">Wrong login or password</string>
    <string name="empty_credentials">Type login and password</string>
    <string name="no_internet">No Internet connection</string>
    <string name="auth_banned">You have been banned</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Leave Room</string>
    <string name="logout_sercher">Logout</string>


    <!--Quiz creation-->
    <string name="title_create_questionnaire">Answer question</string>
    <string name="title_create_interview">Create theme chat</string>
    <string name="creation_title">Title</string>
    <string name="creation_description">Description</string>
    <string name="creation_is_password">Password</string>
    <string name="creation_start_date">Start date</string>
    <string name="creation_end_date">End date</string>
    <string name="creation_is_anonymity">Anonymity</string>
    <string name="creation_answers_limit">Answers limit</string>
    <string name="password_hint">Password</string>

    <array name="question_type">
        <item>One of the list</item>
        <item>A few from the list</item>
        <item>Text (detailed)</item>
    </array>
    <string name="title_activity_graphic">GraphicActivity</string>
    <string name="saveEditedBtn">Save Edited Profile</string>
    <string name="fill_form_header">-</string>
    <string name="fill_the_form_bellow">Fill the form bellow:</string>
    <string name="description">Description</string>
    <string name="write_message">Write message</string>
    <string name="create_new_event">Create new event</string>
    <string name="event_name">Event name</string>
    <string name="free_entrance">Free entrance</string>
    <string name="password">Password</string>
    <string name="confirmation">Confirmation</string>
    <string name="create_event">Create Event</string>
    <string name="enter_the_passwort_to_event">Enter the passwort to Event</string>
    <string name="cancel">Cancel</string>
    <string name="enter">Enter</string>
    <string name="question">Question</string>
    <string name="checkbox">CheckBox</string>
    <string name="radiobutton">RadioButton</string>
    <string name="plase_answer_here">PLASE ANSWER HERE</string>
    <string name="create_new_account">Create New Account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="favorite">FAVORITE</string>
    <string name="all_events">ALL EVENTS</string>
    <string name="my_events">MY EVENTS</string>
    <string name="create_new_event_sec">Create New Event</string>
    <string name="demo">DEMO</string>
    <string name="interview_creation">Theme chat creation:</string>
    <string name="title">Title</string>
    <string name="intereview_question">Theme chat description</string>
    <string name="save_answers">SAVE ANSWERS</string>
    <string name="press_to_add_new_question">Press + to add new question</string>
    <string name="next">Next</string>
    <string name="user_info">User info:</string>
    <string name="e_mail">E-mail</string>
    <string name="password_repeat">Password repeat</string>
    <string name="personal_info">Personal info:</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number_380">Phone number +380</string>
    <string name="birth_day_dd_mm_yyyy">Birth day DD.MM.YYYY</string>
    <string name="additional_info">Additional info:</string>
    <string name="gender">Gender</string>
    <string name="about_yourself">About yourself</string>
    <string name="register">Register</string>
    <string name="back_press">Please click BACK again to exit</string>
    <string name="trob">THERE ARE SOME TROUBLES IN THE SKY</string>
    <string name="fill_titl">Please fill title and description</string>
    <string name="add">Add</string>
    <string name="trob_fire">There are some trables with firebase, sry!</string>
    <string name="no_gen">NO GENDER</string>
    <string name="email_inval">E-mail not valid!</string>
    <string name="wrong_sec_pass">Password is not the same, check it once more!</string>
    <string name="no_fill">Some fields are not filled!</string>
    <string name="process">Processing...</string>
    <string name="need_pasw">YOU NEED PASSWORD!</string>
    <string name="wrong_pasw">WRONG PASSWORD, TRY AGAIN!</string>
    <string name="need_confirm">YOU NEED TO BE CONFIRMED!\n WAIT FOR ARMIN VERIFICATION</string>
    <string name="answ_here">Place answer here</string>
    <string name="not_send">Message not send</string>
    <string name="all_forms">Please fill all fields!</string>
    <string name="save_login">Save login</string>
    <string name="que">Questions</string>
    <string name="the_ch">Theme Chats</string>
    <string name="roo_ch">Room Chat</string>
    <string name="send_answer">Send answer</string>


</resources>
