<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <com.loopeer.shadow.ShadowView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:elevation="@dimen/_8sdp"
        android:foreground="?attr/selectableItemBackground"
        app:cornerRadiusTR="@dimen/_16sdp"
        app:cornerRadiusBL="@dimen/_16sdp"
        app:shadowMargin="@dimen/_8sdp"
        app:shadowRadius="@dimen/_8sdp"
        app:shadowColor="@color/warm_grey"
        tools:targetApi="lollipop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question_haeder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/question"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ll_check_box"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@drawable/custom_btn_dark"
                android:gravity="center"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkBox_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_radio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@drawable/custom_btn_dark"
                android:gravity="center"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/radio_group_place"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/radioButton_place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/radiobutton" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_detailed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@drawable/custom_btn_dark"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/detailed_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="auto"
                    android:hint="@string/plase_answer_here"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorDarkBlue"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </com.loopeer.shadow.ShadowView>
</LinearLayout>